Simplify pkg and remove dummy projects

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "eslint": "^9",
     "eslint-config-next": "15.2.0",
     "tailwindcss": "^4",
+    "ts-prune": "^0.10.3",
     "typescript": "^5"
   }
 }
