--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "@heroicons/react": "^2.2.0",
     "framer-motion": "^12.4.7",
-    "next": "15.2.4",
+    "next": "^15.5.12",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
